test_regress/t/t_var_const_bad.out
%Error: t/t_var_const_bad.v:17:7: Assigning to const variable: 'five'
                                : ... In instance t
   17 |       five = 3'd4;
      |       ^~~~
%Error: Exiting due to
